--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
-    <title>React App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <title>Invester</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
